--- a/styles/Graphic.module.css
+++ b/styles/Graphic.module.css
@@ -1,115 +1,117 @@
-.graphicMain{
-    width: 100%;
-    height: 100%;
-    max-width: 650px;
-    max-height: 450px;
-    position: relative;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+.graphicMain {
+  width: 100%;
+  height: 100%;
+  max-width: 650px;
+  max-height: 450px;
+  position: relative;
 }
 /*SQ 1*/
-.sq1{
-    position: absolute;
-    top: 50%;
-    left: 0%;
-    border: 2px solid #ECECEC;
-    border-radius: 10px;
-    width: 150px;
-    height: 150px;
-    padding: 10px;
-    transition: all 0.5s ease;
+.sq1 {
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  border: 2px solid #ececec;
+  border-radius: 10px;
+  width: 150px;
+  height: 150px;
+  padding: 10px;
+  transition: all 0.5s ease;
 }
-.sq1 > p{
-    font-size: 20px;
-    color: #ECECEC;
-    word-wrap: break-word;
+.sq1 > p {
+  font-size: 20px;
+  color: #ececec;
+  word-wrap: break-word;
+  font-family: "Roboto Mono", monospace;
 }
-.sq1:hover { 
-    filter: invert(1);
+.sq1:hover {
+  filter: invert(1);
 }
 /*SQ 2*/
-.sq2{
-    position: absolute;
-    top: 10%;
-    left: 30%;
-    width: 50px;
-        height: 50px;
-        border: 2px solid #ECECEC;
-    border-radius: 5px;
+.sq2 {
+  position: absolute;
+  top: 10%;
+  left: 30%;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #ececec;
+  border-radius: 5px;
 }
 
 /*SQ 3*/
-.sq3{
-    position: absolute;
-        bottom: 0%;
-        left: 40%;
-    width: 70px;
-    height: 70px;
-    border: 2px solid #F72585;        
-    border-radius: 5px;
-    transition: all 0.5s ease;
+.sq3 {
+  position: absolute;
+  bottom: 0%;
+  left: 40%;
+  width: 70px;
+  height: 70px;
+  border: 2px solid #f72585;
+  border-radius: 5px;
+  transition: all 0.5s ease;
 }
-.sq3:hover{
-    box-shadow:0px 0px 10px 5px #F72585;
+.sq3:hover {
+  box-shadow: 0px 0px 10px 5px #f72585;
 }
 
 /*SQ 4*/
 .sq4 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    bottom: 45%;
-    left: 40%;
-    width: 100px;
-    height: 100px;
-    border: 2px solid #ECECEC;
-    border-radius: 5px;
-    transition: all 0.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 45%;
+  left: 40%;
+  width: 100px;
+  height: 100px;
+  border: 2px solid #ececec;
+  border-radius: 5px;
+  transition: all 0.5s ease;
 }
 
 /*SQ 4*/
 .sq5 {
-    position: absolute;
-    top: 0%;
-    left: 60%;
-    width: 60px;
-    height: 60px;
-    border: 3px solid #4CC9F0;
-    border-radius: 5px;
-    transition: all 0.5s ease;
+  position: absolute;
+  top: 0%;
+  left: 60%;
+  width: 60px;
+  height: 60px;
+  border: 3px solid #4cc9f0;
+  border-radius: 5px;
+  transition: all 0.5s ease;
 }
 
 .sq5:hover {
-    box-shadow: 0px 0px 10px 5px #4CC9F0;
+  box-shadow: 0px 0px 10px 5px #4cc9f0;
 }
 
 /*SQ 6*/
 .sq6 {
-    position: absolute;
-    bottom: 20%;
-    right: 30%;
-    width: 55px;
-    height: 55px;
-    border: 2px solid #ECECEC;
-    border-radius: 5px;
+  position: absolute;
+  bottom: 20%;
+  right: 30%;
+  width: 55px;
+  height: 55px;
+  border: 2px solid #ececec;
+  border-radius: 5px;
 }
 
 /*SQ 7*/
 .sq7 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 20%;
-    right: 0%;
-    width: 120px;
-    height: 120px;
-    border: 2px solid #ECECEC;
-    border-radius: 5px;
-    transition: all 0.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 20%;
+  right: 0%;
+  width: 120px;
+  height: 120px;
+  border: 2px solid #ececec;
+  border-radius: 5px;
+  transition: all 0.5s ease;
 }
 
 @media only screen and (max-width: 500px) {
-    .graphicMain{
-        width: 95%;
-    }
+  .graphicMain {
+    width: 95%;
+  }
 }
