--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -1,9 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 .container {
-    width: 100vw;
-    height: 100vh;
-    background: #232323;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  background: #232323;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.divider {
+  height: 1px;
+  width: 90%;
+  margin-bottom: 20px;
+  background: #3d3d3d;
 }
