--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,69 +1,73 @@
-.navMain{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 2.5%;
-    max-width: 1280px;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+
+.navMain {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 2.5%;
+  max-width: 1280px;
 }
-.navLinks{
-    list-style: none;
-    display: flex;
-    align-items: center;
+.navLinks {
+  list-style: none;
+  display: flex;
+  align-items: center;
 }
 .navLinks li {
-    margin-left: 30px;
+  margin-left: 30px;
 }
-.NavLinksHref{
-    text-decoration: none;
-    color: #ECECEC;
-    font-size: 15px;
+.NavLinksHref {
+  font-family: "Roboto Mono", monospace;
+  text-decoration: none;
+  color: #ececec;
+  font-size: 15px;
 }
 /*CROSS*/
 .burgerToggle {
-    display: none;
+  display: none;
 }
 @media only screen and (max-width: 500px) {
   .burgerToggle {
     display: flex;
   }
-  .navLinks{
+  .navLinks {
     display: none;
   }
-  .navMain{
+  .navMain {
     padding: 5%;
   }
 }
 .burgerCross {
-    font-size: 25px;
-    color: #ECECEC;
-    cursor: pointer;
+  font-size: 25px;
+  color: #ececec;
+  cursor: pointer;
 }
 /*MOBILE NAV*/
 .mobileNav {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #232323;
-    position: fixed;
-    top: 0;
-    left: 0;
-    transform: translateX(100%);
-    transition: all ease 0.5s;
-    z-index: 5;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #232323;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translateX(100%);
+  transition: all ease 0.5s;
+  z-index: 5;
 }
-.navLinksMobile{
-    list-style: none;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
+.navLinksMobile {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Roboto Mono", monospace;
 }
 .navLinksMobile li {
-    padding: 20px;
-    cursor: pointer;
+  padding: 20px;
+  cursor: pointer;
 }
 .mobileNavTransformed {
-    transform: translateX(0%);
+  transform: translateX(0%);
 }
