updates and fixes 🔨

--- a/styles/Graphic.module.css
+++ b/styles/Graphic.module.css
@@ -4,8 +4,8 @@
   height: 100%;
   max-width: 650px;
   max-height: 450px;
-  background: url("../public/Amazer.gif");
-  background-size: cover;
+  /* background: url("../public/Amazer.gif"); */
+  /* background-size: cover; */
 }
 /*SQ 1*/
 .sq1 {
